--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "process.nextTick but always with args",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js | tspec"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/calvinmetcalf/process-nextick-args",
   "devDependencies": {
-    "tap-spec": "~3.0.0",
     "tape": "~4.0.0"
   }
 }
