Add files entry to package.json.
Removes unnecessary files from the deployed package.

Deploying unnecessary files impacts the performance of `npm install` for everyone.

See: https://github.com/insin/package-config-checker

This PR was created using a series of both scripted and manual steps. I have done my best to make sure my modifications are correct, but I am creating similar PR for a lot of repositories today. So please, double check that I have included all the important files (and apologies if I've made some huge oversight).

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.6",
   "description": "process.nextTick but always with args",
   "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "node test.js"
   },
